<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingEnd="8dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/text_bantuan_diagnosa1"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/bantuan_diagnosa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/text_bantuan_diagnosa2"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/pertanyaan1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/text_bantuan_diagnosa3"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/pertanyaan2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/text_bantuan_diagnosa4"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/dialog_hasil"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/text_bantuan_diagnosa5"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/hasil_detail_kerusakan"/>

    </LinearLayout>

</ScrollView>