<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailKerusakanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingEnd="8dp"
        android:paddingBottom="24dp">


        <ImageView
            android:id="@+id/image_view_kerusakan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_view_nama_kerusakan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Kerusakan Komputer"
            android:textColor="#000000"
            android:textSize="20sp" />

        <!--   Deskripsi     -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#D5D5D5"
            android:text="@string/title_penyebab"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_text"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <!--   Gejala Kerusakan     -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:background="#D5D5D5"
            android:text="@string/title_gejala_keruskan"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_gejala_kerusakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_text"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <!--      Solusi     -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:background="#D5D5D5"
            android:text="@string/title_solusi"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_solusi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_text"
            android:textColor="#000000"
            android:textSize="16sp"/>


    </LinearLayout>

</ScrollView>